<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:title="@string/home"
        android:checkable="true"/>
    <item
        android:id="@+id/navigation_about"
        android:title="@string/about_the_shelter"
        android:checkable="true"/>
    <item
        android:id="@+id/navigation_our_pets"
        android:title="@string/our_pets"
        android:checkable="true"/>


    <item
        android:id="@+id/navigation_fav"
        android:title="Favorites"
        android:checkable="true"/>

    <item
        android:id="@+id/navigation_help"
        android:title="@string/help_the_shelter"
        android:checkable="true"/>
    <item
        android:id="@+id/navigation_contacts"
        android:title="@string/contacts"
        android:checkable="true"/>


</menu>