<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_start_screen_gradient_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/about_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/for_questions_and_suggestions"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin_50_dp"
        style="@style/H2"/>

    <TextView
        android:id="@+id/email_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_50_dp"
        android:layout_marginEnd="@dimen/margin_50_dp"
        app:layout_constraintTop_toBottomOf="@id/about_title_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/padding_20"
        android:text="@string/email"
        style="@style/H3"
        android:textAlignment="center"
        app:drawableLeftCompat="@drawable/ic_mail" />

    <TextView
        android:id="@+id/phone_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_50_dp"
        android:layout_marginEnd="@dimen/margin_50_dp"
        app:layout_constraintTop_toBottomOf="@id/email_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_50_dp"
        android:text="@string/phone_number"
        style="@style/H3"
        android:textAlignment="center"
        app:drawableLeftCompat="@drawable/ic_phone" />

    <TextView
        android:id="@+id/visit_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visit_text"
        app:layout_constraintTop_toBottomOf="@id/phone_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin_50_dp"
        style="@style/H2"/>

    <TextView
        android:id="@+id/address_1_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_20"
        android:layout_marginEnd="@dimen/padding_20"
        app:layout_constraintTop_toBottomOf="@id/visit_title_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/padding_20"
        android:text="@string/address_1"
        style="@style/H3"
        android:textAlignment="center"
        app:drawableLeftCompat="@drawable/ic_pin" />

    <TextView
        android:id="@+id/address_2_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_20"
        android:layout_marginEnd="@dimen/padding_20"
        app:layout_constraintTop_toBottomOf="@id/address_1_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_50_dp"
        android:text="@string/address_2"
        style="@style/H3"
        android:textAlignment="center"
        app:drawableLeftCompat="@drawable/ic_pin" />

    <ImageView
        android:id="@+id/footer_image"
        app:layout_constraintTop_toBottomOf="@id/address_2_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/footer_puppy"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>