<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/WhitePage">

    <RelativeLayout
        android:id="@+id/connection_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view_icon"
            android:layout_width="@dimen/image_300_dp"
            android:layout_height="@dimen/image_300_dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/image_150dp"
            android:scaleType="centerCrop"
            app:lottie_autoPlay="true"
            app:lottie_loop="true" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/try_again_title"
            android:textSize="@dimen/text_20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/animation_view_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_sixteen"
            android:text="@string/no_connection"
            android:textAlignment="center"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/try_again_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/try_again_title"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_sixteen"
            android:text="@string/connection_subtitle"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/try_again_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/try_again"
            style="@style/ButtonOutline"
            android:layout_marginBottom="@dimen/margin_42"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>