<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_start_screen_gradient_background"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_title_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="42dp"
        android:text="@string/not_only_people_need_a_house"
        style="@style/H2"
        app:layout_constraintBottom_toTopOf="@id/main_content_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_content_textview"
        android:text="@string/main_context"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="12sp"
        style="@style/DescriptionText"
        android:layout_marginBottom="@dimen/margin_sixteen"
        android:layout_marginStart="@dimen/margin_sixteen"
        android:layout_marginEnd="@dimen/margin_sixteen"
        app:layout_constraintBottom_toTopOf="@id/make_friend_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/make_friend_btn"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/make_a_friend"
        android:layout_marginBottom="@dimen/margin_sixteen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/puppy_imageview"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/puppy_imageview"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/start_sceen_puppy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>