<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:theme="@style/WhitePage"
    app:cardCornerRadius="@dimen/card_view_corner_radius"
    android:layout_marginStart="@dimen/margin_50_dp"
    android:layout_marginEnd="@dimen/margin_50_dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/pet_name_tv"
            style="@style/H2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:maxLines="1"
            android:gravity="center_horizontal"
            android:text="@tools:sample/full_names"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="@+id/pet_desc_tv"
            app:layout_constraintStart_toStartOf="@+id/pet_desc_tv"
            app:layout_constraintTop_toBottomOf="@id/pet_name_tv">

            <TextView
                android:id="@+id/pet_type_tv"
                style="@style/H3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                tools:text="Dog" />

            <TextView
                style="@style/H4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/line"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/pet_breed_tv"
                style="@style/H3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="Labrador" />
        </LinearLayout>

        <TextView
            android:id="@+id/pet_desc_tv"
            style="@style/H3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            android:maxLines="6"
            android:text="@tools:sample/lorem/random"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pet_desc_tv">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/H3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_8dp"
                    android:text="@string/age"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_dot" />

                <TextView
                    android:id="@+id/pet_age_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    tools:text="@tools:sample/date/ddmmyy" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/H3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_8dp"
                    android:text="@string/inoculations"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_dot" />

                <TextView
                    android:id="@+id/pet_inoculations_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    tools:text="@string/none" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/H3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_8dp"
                    android:text="@string/diseases"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_dot" />

                <TextView
                    android:id="@+id/pet_diseases_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    tools:text="@string/none" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/H3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_8dp"
                    android:text="@string/parasites"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_dot" />

                <TextView
                    android:id="@+id/pet_parasites_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    tools:text="@string/none" />
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>